--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
     - uses: actions/checkout@v2
     
     - name: Build
-      run: cargo build --release
+      run: cargo build --release && strip -s target/release/preprocessor-md-tex
     
     - name: Release
       uses: softprops/action-gh-release@v1
